<resources>
    <string name="app_name">GloSho Conductor</string>
    <string name="connecting_text">Connecting...</string>
    <string name="unable_to_connect_text">Unable to connect...</string>
    <string name="logging_in_text">Logging in...</string>
    <string name="unable_to_log_in_text">Unable to login...</string>
    <string name="ready_to_start_button">Ready?</string>
    <string name="reconnect_button">Reconnect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="waiting_to_start">Waiting for start...</string>
    <string name="waiting_for_command_text">Waiting for command...</string>
    <string name="taking_picture_text">Taking picture...</string>
    <string name="sending_picture_text">Sending picture...</string>
    <string name="done_text">All done!</string>

    <string-array name="resolutions_array">
        <item>176x144</item>
        <item>640x480</item>
    </string-array>
</resources>
