<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:id="@+id/server_url_edit_text"
        android:inputType="textUri"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/reconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_reconnect_button_background"
        android:text="@string/reconnect_button"
        android:textColor="@color/color_reconnect_button_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_disconnect_button_background"
        android:text="@string/disconnect_button"
        android:textColor="@color/color_disconnect_button_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/ready_to_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/color_ready_to_start_button_background"
        android:text="@string/ready_to_start_button"
        android:textColor="@color/color_ready_to_start_button_text" />

    <TextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 players"
        android:id="@+id/player_count_text_view"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting_text"
        android:id="@+id/connecting_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logging_in_text"
        android:id="@+id/logging_in_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unable_to_log_in_text"
        android:id="@+id/unable_to_login_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unable_to_connect_text"
        android:id="@+id/unable_to_connect_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_command_text"
        android:id="@+id/waiting_for_command_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taking_picture_text"
        android:id="@+id/taking_picture_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sending_picture_text"
        android:id="@+id/sending_picture_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Starting in 10 seconds"
        android:id="@+id/starting_in_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_to_start"
        android:id="@+id/waiting_to_start_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_text"
        android:id="@+id/done_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:background="@android:color/black"/>

</RelativeLayout>
